# lora-sftuner

./: .env.example  .gitignore  README.md  clean.sh  clean_llama.sh  clean_ollama.sh  config.yaml.example  pyproject.toml  setup.sh  setup_llama.sh  setup_ollama.sh
src/lora_sftuner/: cli.py  sft_unify_and_split.py
src/lora_sftuner/importers/: docs_importer.py  sql_importer.py  twitter_api_importer.py  twitter_importer.py
src/lora_sftuner/inference/: inference.py
src/lora_sftuner/processing/: sft_unify_and_split.py  twitter_data.py
src/lora_sftuner/training/: sft_trainer.py
